@@ -63,6 +63,10 @@ Move currently selected client to another workspace on the same monitor.
 \fItarget\fP must be one of \fBprev\fP, \fBnext\fP, or an integer
 \fIi\fP where \fI0 <= i <= 127\fP to denote one particular workspace.
 .TP
+\fBfloaters_collect\fP
+Fit all floating clients of the current workspace to the current
+monitor. Some of them might have moved around.
+.TP
 \fBlayout_set\fP \fIalgorithm\fP
 Set the layout algorithm on the currently visible workspace on the
 currently selected monitor. \fIalgorithm\fP must be one of \fBtile\fP,
