@@ -18,6 +18,7 @@ next
   - IPC calls:
     - Center currently selected floating client
     - Maximize currently selected floating client
+    - Collect floating clients, i.e. fit them to current monitor
 
 Milestone 2  2016-01-01
   [Fixed]
